[gd_scene load_steps=36 format=3 uid="uid://ckleb2oi3jx"]

[ext_resource type="Script" uid="uid://bynueiu8e5tr3" path="res://Scripts/Player/Player.gd" id="1_s0eop"]
[ext_resource type="Texture2D" uid="uid://bbfcm4usmgbcs" path="res://Assets/Sprites/Player/mPlayer_ [human].png" id="2_ft8w5"]
[ext_resource type="Material" uid="uid://dwg0omeocgw24" path="res://Assets/Sprites/Player/processMaterial.tres" id="4_ude3g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ft8w5"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t26db"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk5o5"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_825xp"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u84n"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_esmjy"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tu5v"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spxdj"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji083"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kmp4"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5acl"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg6k"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h54ih"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ude3g"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmcll"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wape"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cj01"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2g7t"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io2mu"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5iqy"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t5qx"]
atlas = ExtResource("2_ft8w5")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rd5p"]
atlas = ExtResource("2_ft8w5")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwmao"]
atlas = ExtResource("2_ft8w5")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xdrn"]
atlas = ExtResource("2_ft8w5")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0objx"]
atlas = ExtResource("2_ft8w5")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w71ue"]
atlas = ExtResource("2_ft8w5")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e6p3"]
atlas = ExtResource("2_ft8w5")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb677"]
atlas = ExtResource("2_ft8w5")
region = Rect2(96, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ft8w5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft8w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t26db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk5o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_825xp")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u84n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esmjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tu5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spxdj")
}],
"loop": false,
"name": &"fall",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji083")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kmp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5acl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg6k")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h54ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ude3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmcll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wape")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cj01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2g7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io2mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5iqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t5qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rd5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwmao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xdrn")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0objx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w71ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e6p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb677")
}],
"loop": false,
"name": &"turn",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h54ih"]
size = Vector2(22, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ude3g"]
size = Vector2(24.25, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wid83"]
atlas = ExtResource("2_ft8w5")
region = Rect2(36.9428, 72.796, 21.7248, 22.8835)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_s0eop")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ft8w5")
animation = &"turn"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 8)
shape = SubResource("RectangleShape2D_h54ih")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.875, 8)
shape = SubResource("RectangleShape2D_ude3g")
debug_color = Color(0.986745, 0, 0.320392, 0.42)

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[node name="DashParticles" type="GPUParticles2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(0, 10)
emitting = false
amount = 10
texture = SubResource("AtlasTexture_wid83")
speed_scale = 2.5
trail_lifetime = 0.4
process_material = ExtResource("4_ude3g")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
